typescript/checker/tests/conformance/statements/for-inStatements/for-inStatementsDestructuring4.ts.stderr
error: TS2491
 --> $DIR/tests/conformance/statements/for-inStatements/for-inStatementsDestructuring4.ts:2:6
  |
2 | for ({a, b} in []) { }
  |      ^^^^^^

